--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,9 @@ dependencies = [
     "google-generativeai>=0.8.6",
     "langchain>=1.2.0",
     "langgraph>=1.0.5",
+    "psycopg2-binary>=2.9.11",
     "python-dotenv>=1.2.1",
+    "sqlalchemy>=2.0.45",
     "twilio>=9.9.0",
     "uvicorn>=0.40.0",
 ]
